# borrrdex

./: .gitignore  .gitmodules  FORK-LICENSE.md  LICENSE  Makefile  README.md  borrrdex.code-workspace
Base/: limine.cfg
Kernel/: CMakeLists.txt  bintoelf.sh  linkscript-x86_64.ld
Kernel/include/: bootloader_defs.h  char_buffer.h  device.h  kassert.h  kerrno.h  kguid.h  klist.hpp  kmath.h  kmove.h  kstring.h  lock.h  lock.hpp  logging.h  lru_cache.hpp  pty.h  ref_counted.hpp  spinlock.h  stream.h  timer_event.h
Kernel/include/arch/x86_64/: abi.h  apic.h  cpu.h  debug.h  elf.h  gdt.h  hal.h  idt.h  io.h  kcpuid.h  keyboard.h  kpci.h  paging.h  panic.h  physical_allocator.h  scheduler.h  serial.h  smp.h  smpdefines.inc  stacktrace.h  symbols.h  system.h  thread.h  timer.h  tss.h
Kernel/include/arch/x86_64/acpi/: acpi.h  common.h  fadt.h  hpet.h  madt.h  mcfg.h  rsdp.h  rsdt.h  xsdt.h
Kernel/include/fs/: directory_entry.h  ext2.h  filesystem.h  fs_blocker.h  fs_node.h  fs_volume.h  fs_watcher.h  pipe.h  tar.h
Kernel/include/liballoc/: liballoc.h
Kernel/include/mm/: address_space.h  vm_object.h
Kernel/include/storage/: ahci.h  ahci_controller.h  ahci_port.h  gpt.h
Kernel/include/video/: video.h
Kernel/src/: char_buffer.cpp  device.cpp  kassert.cpp  kernel.cpp  kstring.cpp  lock.cpp  logging.cpp  pty.cpp  stream.cpp
Kernel/src/arch/x86_64/: apic.cpp  debug.cpp  elf.cpp  entry.asm  hal.cpp  idt.asm  idt.cpp  io.cpp  kcpuid.cpp  keyboard.cpp  kpci.cpp  paging.cpp  panic.cpp  physical_allocator.cpp  scheduler.asm  scheduler.cpp  serial.cpp  smp.cpp  smptrampoline.asm  symbols.cpp  syscalls.cpp  thread.cpp  timer.cpp  tss.asm  tss.cpp
Kernel/src/arch/x86_64/acpi/: acpi.cpp
Kernel/src/fs/: directory_entry.cpp  ext2.cpp  filesystem.cpp  fs_blocker.cpp  fs_node.cpp  fs_volume.cpp  pipe.cpp  tar.cpp
Kernel/src/liballoc/: liballoc.c  liballoc_internal.cpp
Kernel/src/mm/: address_space.cpp  vm_object.cpp
Kernel/src/storage/: ahci.cpp  ahci_controller.cpp  ahci_port.cpp  disk_device.cpp  gpt.cpp  partition_device.cpp
Kernel/src/video/: video.cpp
LibBor/: CMakeLists.txt
LibBor/include/borrrdex/core/: framebuffer.h  input.h  keyboard.h
LibBor/include/borrrdex/graphics/: font.h  graphics.h  surface.h  types.h
LibBor/include/borrrdex/system/: framebuffer.h
LibBor/include/borrrdex/system/abi/: framebuffer.h
LibBor/src/borrrdex/: framebuffer.cpp  input.cpp
LibBor/src/gfx/: font.cpp  graphics.cpp  sse2.asm  text.cpp
OVMFbin/: OVMF_VARS-pure-efi.fd
Ports/: borrrdex-freetype-2.10.4.patch  borrrdex-libpng-1.6.37.patch  borrrdex-libressl-3.3.1.patch  borrrdex-ncurses-6.2.patch  borrrdex-zsh-5.8.patch  buildport.sh  freetype.sh  libpng.sh  libressl.sh  ncurses.sh  zlib.sh  zsh.sh
Scripts/: borrrdex-cmake-options.txt  borrrdex.cross-file  buildinitrd.sh  configure.sh  copytodisk.sh  createdisk.sh  formatdisk.sh  lai-CMakeLists.txt  libc.sh  partitions.sfdisk  run_bios.bat
System/: CMakeLists.txt
System/fterm/: colors.h  escape.h  fterm.h  input.cpp  main.cpp
Toolchain/: borrrdex-binutils-2.32.patch  buildtoolchain.sh
bios/: multiboot.h
gnu-efi/bootloader/: BOOTX64.c  main.c
gnu-efi/x86_64/bootloader/: BOOTX64.EFI  main.efi
kernel/: Makefile  kernel.ld  run.bat
kernel/src/: Bitmap.cpp  Bitmap.h  KernelUtil.cpp  KernelUtil.h  Memory.cpp  Memory.h  Panic.cpp  Panic.h  Scheduler.cpp  Scheduler.h  SmartPage.h  config.h  cstr.cpp  kernel.cpp  math.h  ring3test.asm  ring3test.h  ringtest3.cpp  stalloc.cpp  stalloc.h  thread.cpp  thread.h
kernel/src/acpi/: apic.cpp  apic.h  common.h  fadt.cpp  fadt.h  hpet.cpp  hpet.h  mcfg.cpp  mcfg.h  rsdp.cpp  rsdp.h  rsdt.cpp  rsdt.h  xsdt.cpp  xsdt.h
kernel/src/arch/x86_64/: cpuid.cpp  cpuid.h  cswitch.cpp  cswitch.h  irq.asm  irq.cpp  irq.h  pic.cpp  pic.h  spinlock.asm  spinlock.cpp  spinlock.h  timer.cpp  timer.h  tss.asm  tss.cpp
kernel/src/arch/x86_64/gdt/: gdt.asm  gdt.cpp  gdt.h
kernel/src/arch/x86_64/interrupt/: idt.cpp  idt.h  interrupt.cpp  interrupt.h
kernel/src/arch/x86_64/io/: io.cpp  io.h  rtc.cpp  rtc.h  serial.cpp
kernel/src/drivers/: device.h  disk.h  gbd.h  modules.cpp  modules.h
kernel/src/drivers/ahci/: AHCIController.cpp  AHCIController.h  ahci.h
kernel/src/drivers/net/ethernet/: e1000.cpp
kernel/src/drivers/usb/: hidparse.cpp  hidparse.h  ohci.h  uhci.cpp  uhci.h  usb.asm  usb.cpp  usb.h
kernel/src/drivers/usb/hid_keyboard/: hid_keyboard.cpp  hid_keyboard.h
kernel/src/drivers/x86_64/: _disk.h  arch.h  device.cpp  disk.asm  disk.cpp  keyboard.asm  keyboard.cpp  keyboard.h  mouse.asm  mouse.cpp  pit.asm  pit.cpp  pit.h  tty.h
kernel/src/fs/: ext2.cpp  ext2.h  filesystems.cpp  filesystems.h  tfs.cpp  tfs_constants.h  vfs.cpp  vfs.h
kernel/src/gdt/: gdt.asm  gdt.h
kernel/src/graphics/: BasicRenderer.cpp  BasicRenderer.h  Clock.cpp  Clock.h
kernel/src/init/: common.cpp  common.h  init.cpp  init_bak
kernel/src/interrupts/: idt.cpp  idt.h  interrupts.cpp  interrupts.h
kernel/src/io/: io.cpp  io.h  rtc.asm  rtc.cpp  rtc.h  serial.cpp  serial.h
kernel/src/libk/: libk.cpp  memmove.cpp  string.h  strnlen.cpp
kernel/src/memory/: Memory.h  SmartPointer.cpp  SmartPointer.h  heap.cpp  heap.h
kernel/src/paging/: PageFrameAllocator.cpp  PageFrameAllocator.h  PageTableManager.cpp  PageTableManager.h
kernel/src/pci/: PciDeviceType.h  pci.cpp  pci.h
kernel/src/proc/: Process.cpp  Process.h  elf.h  process.cpp  process.h  syscall.cpp  syscall.h
kernel/src/proc/x86_64/: _syscall.cpp  syscall.asm
kernel/src/scheduling/: SleepQueue.cpp  SleepQueue.h  thread.cpp  thread.h
kernel/src/userinput/: keyboard.cpp  keyboard.h  keymaps.cpp  mouse.cpp  mouse.h
kernel/src/util/: list.h
kernel/src/vm/: memory.cpp  memory.h
kernel/src/vm/x86_64/: mem.h  mm_phys.cpp
libc/: Makefile  crt0.asm
libc/include/: assert.h  stdio.h  stdlib.h  string.h
libc/include/bits/: stddef.h
libc/src/: assert.c  stdio.c  string.c
libc/src/x86_64/: syscall.asm
mlibc/: borrrdex.cross-file
shell/: Makefile
usertest/: Makefile
usertest/src/: main.cpp
